[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.265",
    "black>=22.12.0",
    "commitizen>=2.39.1",
    "pre-commit>=2.21.0",
    "pytest>=7.2.0",
    "allure-pytest>=2.12.0",
]

[tool.pylint."messages control"]
disable = ["missing-module-docstring"]
[tool.pylint.'MASTER']
ignore-patterns = ["^test.+"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "pep440"
version = "0.2.0"
update_changelog_on_bump = true
major_version_zero = true
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "shannon1023", email = "shan10231997@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.16",
    "fastapi>=0.97.0",
    "uvicorn>=0.22.0",
    "psycopg2-binary>=2.9.6",
    "jupyterlab>=4.0.2",
    "commitizen>=3.5.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
