[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.20",
    "psycopg2-binary>=2.9.7",
    "pathlib>=1.0.1",
    "pydantic>=2.3.0",
    "pydantic-core>=2.6.3",
    "commitizen>=3.8.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

